--- a/centers.html
+++ b/centers.html
@@ -419,8 +419,9 @@
                         <div class="centers__search-autocomplete-text search__autocomplete-text_number">300</div></a></div>
                   </div>
                 </div>
-                <div class="centers__form-row">
-                  <select class="centers__form-select select-default">
+                <div class="centers__form-row"></div>
+                <div class="centers__form-select-wrapper">
+                  <select class="centers__form-select">
                     <option class="centers__form-option" value="0" selected>Выберите СПК</option>
                     <option class="centers__form-option" value="1">В области сварки</option>
                     <option class="centers__form-option" value="2">В области финансового рынка</option>
