--- a/index.html
+++ b/index.html
@@ -397,26 +397,20 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="services__item-wrapper"><a class="services__item services__item_recommendations" href="#">
-                <h2 class="services__title">Советы по&nbsp;профессиональным<br>квалификациям</h2>
+                <h2 class="services__title">Профессиональные<br>квалификации</h2>
                 <div class="services__arrow"></div></a></div>
             <div class="services__item-wrapper"><a class="services__item services__item_statistics" href="#">
-                <h2 class="services__title">Статистика внедрения НОК</h2>
+                <h2 class="services__title">Оценочные средства</h2>
                 <div class="services__arrow"></div></a></div>
           </div>
           <div class="col-lg-4">
             <div class="services__item-wrapper"><a class="services__item services__item_centers" href="#">
-                <h2 class="services__title">Центры оценки<br>квалификации</h2>
-                <div class="services__arrow"></div></a></div>
-            <div class="services__item-wrapper"><a class="services__item services__item_find" href="#">
-                <h2 class="services__title">Найти экзаменационную<br>площадку</h2>
+                <h2 class="services__title">Стать СПК</h2>
                 <div class="services__arrow"></div></a></div>
           </div>
           <div class="col-lg-4">
-            <div class="services__item-wrapper"><a class="services__item services__item_certificates" href="#">
-                <h2 class="services__title">Свидетельства и&nbsp;заключения</h2>
-                <div class="services__arrow"></div></a></div>
-            <div class="services__item-wrapper"><a class="services__item services__item_appeal" href="#">
-                <h2 class="services__title">Подать апелляцию</h2>
+            <div class="services__item-wrapper"><a class="services__item services__item_find" href="#">
+                <h2 class="services__title">Стать ЦОК</h2>
                 <div class="services__arrow"></div></a></div>
           </div>
         </div>
