--- a/send-appellation.html
+++ b/send-appellation.html
@@ -423,58 +423,64 @@
               <form class="send-appellation__form-card">
                 <div class="send-appellation__form-row">
                   <div class="send-appellation__form-card-title">Подать апелляцию</div>
-                  <select class="send-appellation__form-select select-default">
-                    <option class="send-appellation__form-option" value="0" selected>*Выберите причину апелляции</option>
-                    <option class="send-appellation__form-option" value="1">В области сварки</option>
-                    <option class="send-appellation__form-option" value="2">В области финансового рынка</option>
-                    <option class="send-appellation__form-option" value="3">В строительстве</option>
-                    <option class="send-appellation__form-option" value="4">В наноиндустрии</option>
-                    <option class="send-appellation__form-option" value="5">В здравоохранении</option>
-                    <option class="send-appellation__form-option" value="6">В области информационных технологий</option>
-                    <option class="send-appellation__form-option" value="7">В сфере гостепреимства</option>
-                    <option class="send-appellation__form-option" value="8">На железнодорожном транспорте</option>
-                    <option class="send-appellation__form-option" value="9">В наноиндустрии</option>
-                    <option class="send-appellation__form-option" value="10">В области информационных технологий</option>
-                    <option class="send-appellation__form-option" value="11">В сфере гостепреимства</option>
-                    <option class="send-appellation__form-option" value="12">На железнодорожном транспорте</option>
-                    <option class="send-appellation__form-option" value="13">В наноиндустрии</option>
-                  </select>
+                  <div class="send-appellation__form-select-wrapper">
+                    <select class="send-appellation__form-select">
+                      <option class="send-appellation__form-option" value="0" selected>*Выберите причину апелляции</option>
+                      <option class="send-appellation__form-option" value="1">В области сварки</option>
+                      <option class="send-appellation__form-option" value="2">В области финансового рынка</option>
+                      <option class="send-appellation__form-option" value="3">В строительстве</option>
+                      <option class="send-appellation__form-option" value="4">В наноиндустрии</option>
+                      <option class="send-appellation__form-option" value="5">В здравоохранении</option>
+                      <option class="send-appellation__form-option" value="6">В области информационных технологий</option>
+                      <option class="send-appellation__form-option" value="7">В сфере гостепреимства</option>
+                      <option class="send-appellation__form-option" value="8">На железнодорожном транспорте</option>
+                      <option class="send-appellation__form-option" value="9">В наноиндустрии</option>
+                      <option class="send-appellation__form-option" value="10">В области информационных технологий</option>
+                      <option class="send-appellation__form-option" value="11">В сфере гостепреимства</option>
+                      <option class="send-appellation__form-option" value="12">На железнодорожном транспорте</option>
+                      <option class="send-appellation__form-option" value="13">В наноиндустрии</option>
+                    </select>
+                  </div>
                   <textarea class="send-appellation__input-textarea" value="">Введите описание апелляции</textarea>
                 </div>
                 <div class="send-appellation__form-row">
                   <div class="send-appellation__form-card-title">Выберите профессиональную деятельность</div>
-                  <select class="send-appellation__form-select select-default">
-                    <option class="send-appellation__form-option" value="0" selected>*Выберите причину апелляции</option>
-                    <option class="send-appellation__form-option" value="1">В области сварки</option>
-                    <option class="send-appellation__form-option" value="2">В области финансового рынка</option>
-                    <option class="send-appellation__form-option" value="3">В строительстве</option>
-                    <option class="send-appellation__form-option" value="4">В наноиндустрии</option>
-                    <option class="send-appellation__form-option" value="5">В здравоохранении</option>
-                    <option class="send-appellation__form-option" value="6">В области информационных технологий</option>
-                    <option class="send-appellation__form-option" value="7">В сфере гостепреимства</option>
-                    <option class="send-appellation__form-option" value="8">На железнодорожном транспорте</option>
-                    <option class="send-appellation__form-option" value="9">В наноиндустрии</option>
-                    <option class="send-appellation__form-option" value="10">В области информационных технологий</option>
-                    <option class="send-appellation__form-option" value="11">В сфере гостепреимства</option>
-                    <option class="send-appellation__form-option" value="12">На железнодорожном транспорте</option>
-                    <option class="send-appellation__form-option" value="13">В наноиндустрии</option>
-                  </select>
-                  <select class="send-appellation__form-select select-default">
-                    <option class="send-appellation__form-option" value="0" selected>*Выберите область профессиональной деятельности</option>
-                    <option class="send-appellation__form-option" value="1">В области сварки</option>
-                    <option class="send-appellation__form-option" value="2">В области финансового рынка</option>
-                    <option class="send-appellation__form-option" value="3">В строительстве</option>
-                    <option class="send-appellation__form-option" value="4">В наноиндустрии</option>
-                    <option class="send-appellation__form-option" value="5">В здравоохранении</option>
-                    <option class="send-appellation__form-option" value="6">В области информационных технологий</option>
-                    <option class="send-appellation__form-option" value="7">В сфере гостепреимства</option>
-                    <option class="send-appellation__form-option" value="8">На железнодорожном транспорте</option>
-                    <option class="send-appellation__form-option" value="9">В наноиндустрии</option>
-                    <option class="send-appellation__form-option" value="10">В области информационных технологий</option>
-                    <option class="send-appellation__form-option" value="11">В сфере гостепреимства</option>
-                    <option class="send-appellation__form-option" value="12">На железнодорожном транспорте</option>
-                    <option class="send-appellation__form-option" value="13">В наноиндустрии</option>
-                  </select>
+                  <div class="send-appellation__form-select-wrapper">
+                    <select class="send-appellation__form-select">
+                      <option class="send-appellation__form-option" value="0" selected>*Выберите причину апелляции</option>
+                      <option class="send-appellation__form-option" value="1">В области сварки</option>
+                      <option class="send-appellation__form-option" value="2">В области финансового рынка</option>
+                      <option class="send-appellation__form-option" value="3">В строительстве</option>
+                      <option class="send-appellation__form-option" value="4">В наноиндустрии</option>
+                      <option class="send-appellation__form-option" value="5">В здравоохранении</option>
+                      <option class="send-appellation__form-option" value="6">В области информационных технологий</option>
+                      <option class="send-appellation__form-option" value="7">В сфере гостепреимства</option>
+                      <option class="send-appellation__form-option" value="8">На железнодорожном транспорте</option>
+                      <option class="send-appellation__form-option" value="9">В наноиндустрии</option>
+                      <option class="send-appellation__form-option" value="10">В области информационных технологий</option>
+                      <option class="send-appellation__form-option" value="11">В сфере гостепреимства</option>
+                      <option class="send-appellation__form-option" value="12">На железнодорожном транспорте</option>
+                      <option class="send-appellation__form-option" value="13">В наноиндустрии</option>
+                    </select>
+                  </div>
+                  <div class="send-appellation__form-select-wrapper">
+                    <select class="send-appellation__form-select">
+                      <option class="send-appellation__form-option" value="0" selected>*Выберите область профессиональной деятельности</option>
+                      <option class="send-appellation__form-option" value="1">В области сварки</option>
+                      <option class="send-appellation__form-option" value="2">В области финансового рынка</option>
+                      <option class="send-appellation__form-option" value="3">В строительстве</option>
+                      <option class="send-appellation__form-option" value="4">В наноиндустрии</option>
+                      <option class="send-appellation__form-option" value="5">В здравоохранении</option>
+                      <option class="send-appellation__form-option" value="6">В области информационных технологий</option>
+                      <option class="send-appellation__form-option" value="7">В сфере гостепреимства</option>
+                      <option class="send-appellation__form-option" value="8">На железнодорожном транспорте</option>
+                      <option class="send-appellation__form-option" value="9">В наноиндустрии</option>
+                      <option class="send-appellation__form-option" value="10">В области информационных технологий</option>
+                      <option class="send-appellation__form-option" value="11">В сфере гостепреимства</option>
+                      <option class="send-appellation__form-option" value="12">На железнодорожном транспорте</option>
+                      <option class="send-appellation__form-option" value="13">В наноиндустрии</option>
+                    </select>
+                  </div>
                   <div class="send-appellation__search">
                     <input class="send-appellation__form-input-text send-appellation__form-input-text_search" id="send-appellation__search-input" type="text" value="" placeholder="Введите ID апелляции">
                     <div class="send-appellation__search-btn"></div>
